--- a/christmas-task/src/components/garland/garland.css
+++ b/christmas-task/src/components/garland/garland.css
@@ -1,44 +1,28 @@
 .lights{
   display: flex;
   justify-content: center;
-  /* height: calc(100vh - 140px); */
-  /* width: 800px; */
-  position: absolute;
-  top: 0;
+  top: 100px;
   right: 0;
   bottom: 0;
   left: 0;
-  /* top: 20px;
-  left: 50%;
-  margin-left: -400px; */
+  pointer-events: none;
 }
 
 .lightrope{
-  /* white-space: nowrap;
-  overflow: hidden; */
   position: absolute;
-  /* z-index: 1;
-  margin: 0;
-  padding: 0;
+  margin: 80px auto 0;
   pointer-events: none;
-  border-radius: 50%;
-  padding: 0;
-  list-style: none; */
-  margin: 50px auto 0;
 }
 
 .lightrope li{
   position: absolute;
   top: 49%;
   left: 50%;
-  /* margin: 0;
-  padding: 0; */
   list-style: none;
   width: 5px;
   height: 5px;
   border-radius: 50%;
   margin: -5px;
-  /* background-color: red; */
   animation-name: name;
   animation-fill-mode: both;
   animation-duration: 0.5s;
