--- a/async-race/src/style.css
+++ b/async-race/src/style.css
@@ -163,6 +163,8 @@ input[type="color"]{
   display: block;
   width: 100px;
   height: 50px;
+  margin: 0;
+  /* transform: translateX(1000px); */
 }
 
 .car__road{
